--- a/openfisca_barcelona/tests/benefits/GE-051-03.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-03.yaml
@@ -1,261 +1,260 @@
-- name: "Persona amb tots els condicionants reb l'ajuda"
+- name: Persona amb tots els condicionants reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: true
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: true
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 430 ]
-
-
-- name: "Persona amb ingressos superiors a 530 no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: true
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [430]
+- name: Persona amb ingressos superiors a 530 no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 9000
-     victima_violencia_de_genere: true
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: true
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
-- name: "Persona que no és victima de violència de gènere no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 9000
+        victima_violencia_de_genere: true
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [0]
+- name: Persona que no és victima de violència de gènere no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: false
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: true
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
-- name: "Persona que no és desocupatada no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: false
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [0]
+- name: Persona que no és desocupatada no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: true
-     situacio_laboral: treball_compte_daltri_jornada_complerta
-     inscrit_com_a_demandant_docupacio: false
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
-- name: "Persona que ha rebut una RAI en els ultims 12m no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: true
+        situacio_laboral: treball_compte_daltri_jornada_complerta
+        inscrit_com_a_demandant_docupacio: false
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [0]
+- name: Persona que ha rebut una RAI en els ultims 12m no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: true
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: true
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: true
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
-- name: "Persona que ha rebut tres RAIs no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: true
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: true
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: true
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [0]
+- name: Persona que ha rebut tres RAIs no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: true
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: false
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: true
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
-- name: "Persona que treballa per compte propi no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: true
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: false
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: true
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [0]
+- name: Persona que treballa per compte propi no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: true
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: false
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: true
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
-- name: "Persona que és en ingrés penitenciari no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: true
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: false
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: true
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [0]
+- name: Persona que és en ingrés penitenciari no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: true
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: false
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: true
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
-- name: "Persona que reb prestacions incompatibles no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: true
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: false
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: true
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [0]
+- name: Persona que reb prestacions incompatibles no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: true
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: false
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: true
-     beneficiari_ajuts_per_violencia_de_genere: false
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
-- name: "Persona que és beneficiaria de programes d'ocupació per a violència de genere a no reb l'ajuda"
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: true
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: false
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: true
+        beneficiari_ajuts_per_violencia_de_genere: false
+  output:
+    GE_051_03_mensual: [0]
+- name: Persona que és beneficiaria de programes d'ocupació per a violència de genere a no reb l'ajuda
   description: RAI 3 - Per víctimes de violència de gènere o domèstica
   period: 2017-01
   absolute_error_margin: false
-  families:
-     sustentadors_i_custodia: ["adult1"]
-  unitats_de_convivencia:
-     persones_que_conviuen: ["adult1"]
-  families_fins_a_segon_grau:
-    familiars: ["adult1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts:
-      2016: 6000
-     victima_violencia_de_genere: true
-     situacio_laboral: aturat
-     inscrit_com_a_demandant_docupacio: false
-     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
-     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
-     treballa_per_compte_propi: false
-     ingressat_en_centre_penitenciari: false
-     percep_prestacions_incompatibles_amb_la_feina: false
-     beneficiari_ajuts_per_violencia_de_genere: true
-  output_variables:
-     GE_051_03_mensual: [ 0 ]
-
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        ingressos_bruts:
+          2016: 6000
+        victima_violencia_de_genere: true
+        situacio_laboral: aturat
+        inscrit_com_a_demandant_docupacio: false
+        ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+        ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+        treballa_per_compte_propi: false
+        ingressat_en_centre_penitenciari: false
+        percep_prestacions_incompatibles_amb_la_feina: false
+        beneficiari_ajuts_per_violencia_de_genere: true
+  output:
+    GE_051_03_mensual: [0]
