implement year progression for RGC

--- a/openfisca_barcelona/parameters/benefits/GG270/llindars_ingressos.yaml
+++ b/openfisca_barcelona/parameters/benefits/GG270/llindars_ingressos.yaml
@@ -2,19 +2,49 @@
   values:
     2017-01-01:
       value: 564
+    2018-09-15:
+      value: 604
+    2019-09-15:
+      value: 644
+    2020-04-01:
+      value: 664
 2:
   values:
     2017-01-01:
       value: 836
+    2018-09-15:
+      value: 896
+    2019-09-15:
+      value: 956
+    2020-04-01:
+      value: 996
 3:
   values:
     2017-01-01:
       value: 909
+    2018-09-15:
+      value: 969
+    2019-09-15:
+      value: 1029
+    2020-04-01:
+      value: 1096
 4:
   values:
     2017-01-01:
       value: 982
+    2018-09-15:
+      value: 1042
+    2019-09-15:
+      value: 1102
+    2020-04-01:
+      value: 1196
 5_o_mes:
   values:
     2017-01-01:
       value: 1062
+    2018-09-15:
+      value: 1122
+    2019-09-15:
+      value: 1181
+    2020-04-01:
+      value: 1208
