--- a/openfisca_barcelona/tests/benefits/GA-234-02.yaml
+++ b/openfisca_barcelona/tests/benefits/GA-234-02.yaml
@@ -1,5 +1,5 @@
-- name: Persona >= 65 anys, empadronat a Barcelona, ingressos < límit, se sent sol
-  description: GA_234_01 - Ajuda Vincles (A)
+- name: Persona >= 65 anys, empadronat a Barcelona, ingressos < límit_minim, se sent sol
+  description: GA_234_02 - Ajuda Vincles (B)
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -18,9 +18,9 @@
         municipi_empadronament: barcelona
         sentirse_sol: true
   output:
-    GA_234_01: [1]
-- name: Persona >= 65 anys, empadronat a Barcelona, ingressos < límit, no se sent sol
-  description: GA_234_01 - Ajuda Vincles (A)
+    GA_234_02: [0]
+- name: Persona >= 65 anys, empadronat a Barcelona, ingressos < límit_mínim, no se sent sol
+  description: GA_234_02 - Ajuda Vincles (B)
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -39,9 +39,9 @@
         municipi_empadronament: barcelona
         sentirse_sol: false
   output:
-    GA_234_01: [0]
-- name: Persona >= 65 anys, empadronat a Barcelona, ingressos > límit, se sent sol
-  description: GA_234_01 - Ajuda Vincles (A)
+    GA_234_02: [0]
+- name: Persona >= 65 anys, empadronat a Barcelona, límit_màxim > ingressos > límit_mínim, se sent sol
+  description: GA_234_02 - Ajuda Vincles (B)
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -60,9 +60,9 @@
         municipi_empadronament: barcelona
         sentirse_sol: true
   output:
-    GA_234_01: [0]
-- name: Persona >= 65 anys, empadronat a altres, ingressos < límit, se sent sol
-  description: GA_234_01 - Ajuda Vincles (A)
+    GA_234_02: [1]
+- name: Persona >= 65 anys, empadronat a Barcelona, límit_mínim < ingressos < límit_màxim, se sent sol
+  description: GA_234_02 - Ajuda Vincles (B)
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -76,35 +76,35 @@
       adult1:
         edat: 66
         ingressos_bruts:
-          2016: 6000
-        situacio_laboral: aturat
-        municipi_empadronament: altres
-        sentirse_sol: true
-  output:
-    GA_234_01: [0]
-- name: Persona >= 65 anys, empadronat a Barcelona, ingressos < límit, se sent sol
-  description: GA_234_01 - Ajuda Vincles (A)
-  period: 2017-01
-  absolute_error_margin: false
-  input:
-    familia:
-      sustentadors_i_custodia: [adult1]
-    unitat_de_convivencia:
-      persones_que_conviuen: [adult1]
-    familia_fins_a_segon_grau:
-      familiars: [adult1]
-    persones:
-      adult1:
-        edat: 66
-        ingressos_bruts:
-          2016: 6000
+          2016: 19000
         situacio_laboral: aturat
         municipi_empadronament: barcelona
         sentirse_sol: true
   output:
-    GA_234_01: [1]
-- name: Persona < 65 anys, empadronat a Barcelona, ingressos < límit, se sent sol
-  description: GA_234_01 - Ajuda Vincles (A)
+    GA_234_02: [0]
+- name: Persona >= 65 anys, empadronat a altres, límit_mínim < ingressos < límit_màxim, se sent sol
+  description: GA_234_02 - Ajuda Vincles (B)
+  period: 2017-01
+  absolute_error_margin: false
+  input:
+    familia:
+      sustentadors_i_custodia: [adult1]
+    unitat_de_convivencia:
+      persones_que_conviuen: [adult1]
+    familia_fins_a_segon_grau:
+      familiars: [adult1]
+    persones:
+      adult1:
+        edat: 66
+        ingressos_bruts:
+          2016: 16000
+        situacio_laboral: aturat
+        municipi_empadronament: altres
+        sentirse_sol: true
+  output:
+    GA_234_02: [0]
+- name: Persona < 65 anys, empadronat a Barcelona, límit_mínim < ingressos < límit_màxim, se sent sol
+  description: GA_234_02 - Ajuda Vincles (B)
   period: 2017-01
   absolute_error_margin: false
   input:
@@ -118,14 +118,14 @@
       adult1:
         edat: 60
         ingressos_bruts:
-          2016: 6000
+          2016: 16000
         situacio_laboral: aturat
         municipi_empadronament: barcelona
         sentirse_sol: true
   output:
-    GA_234_01: [0]
-- name: Persona >= 65 anys, empadronat a Barcelona, ingressos < límit, se sent sol, 2 membres, fill no rep ajuda
-  description: GA_234_01 - Ajuda Vincles (A)
+    GA_234_02: [0]
+- name: Persona >= 65 anys, empadronat a Barcelona, límit_mínim < ingressos < límit_màxim, se sent sol, 2 membres, fill no rep ajuda
+  description: GA_234_02 - Ajuda Vincles (B)
   period: 2017-01
   absolute_error_margin: 0
   input:
@@ -145,7 +145,7 @@
         municipi_empadronament: barcelona
         sentirse_sol: true
         ingressos_bruts:
-          2016: 8000
+          2016: 18000
         situacio_laboral: aturat
         ha_esgotat_prestacio_de_desocupacio: true
         anys_empadronat_a_barcelona: 10
@@ -158,9 +158,9 @@
         anys_empadronat_a_barcelona: 3
         ordre_del_menor: 0
   output:
-    GA_234_01: [1, 0]
-- name: Persona >= 65 anys, empadronat a Barcelona, ingressos < límit, se sent sol, 3 membres, fill i parella no reben ajuda
-  description: GA_234_01 - Ajuda Vincles (A)
+    GA_234_02: [1, 0]
+- name: Persona >= 65 anys, empadronat a Barcelona, límit_mínim < ingressos < límit_màxim, se sent sol, 3 membres, fill i parella no reben ajuda
+  description: GA_234_02 - Ajuda Vincles (B)
   period: 2017-01
   absolute_error_margin: 0
   input:
@@ -180,7 +180,7 @@
         municipi_empadronament: barcelona
         sentirse_sol: true
         ingressos_bruts:
-          2016: 8000
+          2016: 18000
         situacio_laboral: aturat
         ha_esgotat_prestacio_de_desocupacio: true
         anys_empadronat_a_barcelona: 10
@@ -189,7 +189,7 @@
         municipi_empadronament: barcelona
         sentirse_sol: true
         ingressos_bruts:
-          2016: 6000
+          2016: 9000
         situacio_laboral: aturat
         ha_esgotat_prestacio_de_desocupacio: true
         anys_empadronat_a_barcelona: 10
@@ -202,9 +202,9 @@
         anys_empadronat_a_barcelona: 3
         ordre_del_menor: 0
   output:
-    GA_234_01: [1, 0, 0]
-- name: Persona >= 65 anys, empadronat a Barcelona, ingressos < límit, se senten sols, 3 membres, parella rep, fill no rep
-  description: GA_234_01 - Ajuda Vincles (A)
+    GA_234_02: [1, 0, 0]
+- name: Persona >= 65 anys, empadronat a Barcelona, límit_mínim < ingressos < límit_màxim, se senten sols, 3 membres, parella rep, fill no rep
+  description: GA_234_02 - Ajuda Vincles (B)
   period: 2017-01
   absolute_error_margin: 0
   input:
@@ -224,7 +224,7 @@
         municipi_empadronament: barcelona
         sentirse_sol: true
         ingressos_bruts:
-          2016: 8000
+          2016: 18000
         situacio_laboral: aturat
         ha_esgotat_prestacio_de_desocupacio: true
         anys_empadronat_a_barcelona: 10
@@ -233,7 +233,7 @@
         municipi_empadronament: barcelona
         sentirse_sol: true
         ingressos_bruts:
-          2016: 6000
+          2016: 9000
         situacio_laboral: aturat
         ha_esgotat_prestacio_de_desocupacio: true
         anys_empadronat_a_barcelona: 10
@@ -246,4 +246,4 @@
         anys_empadronat_a_barcelona: 3
         ordre_del_menor: 0
   output:
-    GA_234_01: [1, 1, 0]
+    GA_234_02: [1, 1, 0]
