--- a/openfisca_barcelona/parameters/benefits/AE230/import_total.yaml
+++ b/openfisca_barcelona/parameters/benefits/AE230/import_total.yaml
@@ -10,3 +10,10 @@ total:
       value: 900
     2019-01-01:
       value: 800
+
+cap:
+  values:
+    2017-01-01:
+      value: 0
+    2019-01-01:
+      value: 0
